refactor(search2): move logic from Path to Property and refine class naming